--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,17 +1,39 @@
-.split-container {
-  height: 100vh;
+body {
+  background-color: #0a0a0a;
+  color: #ffffff;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.trip-container {
   display: flex;
+  height: calc(100vh - 64px);
 }
 
-.left-panel, .right-panel {
-  overflow-y: auto;
-  padding: 20px;
-  color: white;
-  text-align: center;
+.trip-list, .trip-details {
+  flex: 1;
+  padding: 16px;
+  background-color: #0a0a0a;
 }
 
-.gutter {
-  background-color: #222222;
-  cursor: col-resize;
-  height: 100%;
+.divider {
+  width: 1px;
+  background-color: #333;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #ffffff;
+}
+
+button {
+  background-color: #3a3a3a;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #555;
 }
