--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #0a0a0a;
+  background-color: #09041b;
   color: #ffffff;
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -27,7 +27,7 @@ body {
 
 .divider {
   width: 1px;
-  background-color: #333;
+  background-color: #161d30;
   margin: 0;
 }
 
@@ -45,4 +45,10 @@ button {
 
 button:hover {
   background-color: #555;
+}
+
+/* Trip list item hover*/
+.css-x3pj3z:hover {
+  background-color: transparent !important; 
+  border-radius: 8px !important; 
 }
