--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,13 +1,13 @@
 body {
-  background-color: #09041b;
+  background-color: #0E1113;
   color: #ffffff;
   margin: 0;
   font-family: 'Roboto', sans-serif;
 }
 
-.trip-container {
+/* .trip-container {
   height: calc(100vh - 64px);
-}
+} */
 
 .trip-list, .trip-details {
   flex: 1;
@@ -27,7 +27,7 @@ body {
 
 .divider {
   width: 1px;
-  background-color: #161d30;
+  background-color: #242424;
   margin: 0;
 }
 
@@ -51,4 +51,84 @@ button:hover {
 .css-x3pj3z:hover {
   background-color: transparent !important; 
   border-radius: 8px !important; 
+}
+
+.react-datepicker-dark {
+  background-color: #0E1113;
+  border-color: #374151;
+  color: white;
+}
+
+.react-datepicker-dark .react-datepicker__header {
+  background-color: #131416;
+  border-bottom-color: #374151;
+}
+
+.react-datepicker-dark .react-datepicker__month {
+  background-color: #0E1113; /* Added this line to make the background of the days dark */
+}
+
+.react-datepicker-dark .react-datepicker__day {
+  color: #ffffff; 
+}
+
+.react-datepicker-dark .react-datepicker__day--selected {
+  background-color: #ff0000; 
+  color: #000000; 
+}
+
+.react-datepicker-dark .react-datepicker__day:hover {
+  background-color: #16181a;
+}
+
+.react-datepicker-dark .react-datepicker__current-month {
+  color: #e5e7eb;
+}
+
+.react-datepicker-dark .react-datepicker__day-name {
+  color: #9ca3af;
+}
+
+.react-datepicker-dark .react-datepicker__time-container {
+  background-color: #0E1113;
+  border-left-color: #374151;
+}
+
+.react-datepicker-dark .react-datepicker__time-list-item {
+  color: #e5e7eb;
+}
+
+.react-datepicker-dark .react-datepicker__time-list-item:hover {
+  background-color: #1f2937;
+}
+
+.react-datepicker__triangle {
+  display: none !important;
+}
+
+.react-datepicker__month-container {
+  background-color: #000000 !important;
+}
+
+.react-datepicker__day--keyboard-selected {
+  background-color: #ff0000 !important;
+  color: #000000 !important;
+}
+
+.react-datepicker__day--in-range {
+  background-color: #ff0000 !important;
+  color: #000000 !important;
+}
+
+.react-datepicker-wrapper {
+  display: flex;
+}
+
+.react-datepicker__close-icon::after {
+  color: #ffffff;
+  background-color: transparent;
+}
+
+.react-datepicker__close-icon:hover {
+  background-color: transparent !important;
 }
